<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.soliscode</groupId>
  <artifactId>soliscode</artifactId>
  <version>0.0.0-SNAPSHOT</version> <!-- placeholder; semantic-release overwrites -->
  <packaging>jar</packaging>

  <name>SolisCode Test</name>
  <description>Library for writing unit tests for classes that implement standard interfaces</description>
  <url>https://soliscode.org</url>
  <inceptionYear>2025</inceptionYear>

  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>evanbergstrom</id>
      <name>Evan Bergstrom</name>
      <email>evan.bergstrom@icloud.com</email>
      <organization>soliscode</organization>
      <url>http://www.evanbergstrom.com</url>
      <timezone>America/New_York</timezone>
    </developer>
  </developers>

  <scm>
    <connection>scm:git@gitlab.com:soliscode/soliscode-test.git</connection>
    <developerConnection>scm:git:ssh://git@gitlab.com:soliscode/soliscode-test.git</developerConnection>
    <url>https://gitlab.com/soliscode/soliscode-test.git</url>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>23</java.version>
    <java.vendor>oracle</java.vendor>

    <javaDocStylesheetPath>${basedir}/src/main/javadoc/stylesheet.css</javaDocStylesheetPath>

    <maven.plugin.validation>verbose</maven.plugin.validation>

    <math.mathjax.url>https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js</math.mathjax.url>
    <allowscript.javadoc.qualifier>--allow-script-in-comments</allowscript.javadoc.qualifier>
    <doclint.javadoc.qualifier>-Xdoclint:all</doclint.javadoc.qualifier>


    <!-- compile dependency versions -->
    <junit-platform.version>1.10.1</junit-platform.version>
    <junit-jupiter.version>5.10.1</junit-jupiter.version>
    <assertj-core.version>3.24.2</assertj-core.version>
    <jetbrains-annotations.version>24.1.0</jetbrains-annotations.version>

    <!-- plugin versions -->
    <maven-toolchains-plugin.version>1.1</maven-toolchains-plugin.version>
    <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
    <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
    <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
    <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
    <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
    <maven-install-plugin.version>3.1.1</maven-install-plugin.version>
    <maven-site-plugin.version>3.12.1</maven-site-plugin.version>
    <maven-surefire-report-plugin.version>3.1.2</maven-surefire-report-plugin.version>
    <maven-project-info-reports-plugin.version>3.4.5</maven-project-info-reports-plugin.version>
    <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
    <maven-javadoc-plugin.version>3.4.1</maven-javadoc-plugin.version>
    <maven-gpg-plugin.version>3.2.4</maven-gpg-plugin.version>
    <maven-checkstyle-plugin.version>3.3.0</maven-checkstyle-plugin.version>
    <maven-jxr-plugin.version>3.3.0</maven-jxr-plugin.version>
    <maven-surefire-junit5-tree-reporter.verison>1.4.0</maven-surefire-junit5-tree-reporter.verison>
    <central-publishing-maven-plugin.version>0.8.0</central-publishing-maven-plugin.version>
    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    <mdoclet-plugin.version>3.1.0</mdoclet-plugin.version>
    <flexmark-all.version>0.64.8</flexmark-all.version>
    <dependency-check.version>9.2.0</dependency-check.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>${jetbrains-annotations.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit-jupiter.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit-jupiter.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-testkit</artifactId>
      <version>${junit-platform.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-toolchains-plugin</artifactId>
        <version>${maven-toolchains-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>toolchain</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <toolchains>
            <jdk>
              <version>${java.version}</version>
              <vendor>${java.vendor}</vendor>
            </jdk>
          </toolchains>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven-source-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals><goal>jar-no-fork</goal></goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>${maven-clean-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <version>${maven-resources-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <debug>true</debug>
          <debuglevel>lines,vars,source</debuglevel>
          <release>${java.version}</release>
          <!-- Need the source and target properties so maven-javadoc-plugin will find maven-compile-plugin -->
          <source>${java.version}</source>
          <target>${java.version}</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-jupiter.version}</version>
          </dependency>
          <dependency>
              <groupId>me.fabriciorby</groupId>
              <artifactId>maven-surefire-junit5-tree-reporter</artifactId>
              <version>${maven-surefire-junit5-tree-reporter.verison}</version>
          </dependency>
        </dependencies>
        <configuration>
            <reportFormat>plain</reportFormat>
            <consoleOutputReporter>
                <disable>true</disable>
            </consoleOutputReporter>
            <includes>
              <include>**/*Test.java</include>
              <exclude>**/Test*.java</exclude>
            </includes>
            <statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
              <disable>false</disable>
              <version>3.0</version>
              <usePhrasedFileName>false</usePhrasedFileName>
              <usePhrasedTestSuiteClassName>true</usePhrasedTestSuiteClassName>
              <usePhrasedTestCaseClassName>true</usePhrasedTestCaseClassName>
              <usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
            </statelessTestsetReporter>
            <statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter">
                <disable>false</disable>
                <usePhrasedFileName>false</usePhrasedFileName>
                <usePhrasedClassNameInRunning>true</usePhrasedClassNameInRunning>
                <usePhrasedClassNameInTestCaseSummary>true</usePhrasedClassNameInTestCaseSummary>
              </statelessTestsetInfoReporter>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>${maven-project-info-reports-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven-jar-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-install-plugin</artifactId>
        <version>${maven-install-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-site-plugin</artifactId>
        <version>${maven-site-plugin.version}</version>
        <configuration>
          <locales>en</locales>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>${maven-surefire-report-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>${maven-deploy-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals><goal>jar</goal></goals>
          </execution>
        </executions>
        <configuration>
          <defaultAuthor>Evan Bergstrom</defaultAuthor>
          <defaultVersion>${project.version}</defaultVersion>
          <version>true</version>
          <author>true</author>
          <quiet>true</quiet>
          <name>Documentation</name>
          <docfilessubdirs>true</docfilessubdirs>
          <additionalJOptions>
            <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
          </additionalJOptions>
          <additionalOptions>-stylesheetfile ${javaDocStylesheetPath} ${doclint.javadoc.qualifier} ${allowscript.javadoc.qualifier} -header '&lt;script src="https://polyfill.io/v3/polyfill.min.js?features=es6"&gt;&lt;/script&gt;&lt;script type="text/javascript" async src="${math.mathjax.url}"&gt;&lt;/script&gt;'</additionalOptions>
          <tags>
            <tag>
              <name>apiNote</name>
              <placement>a</placement>
              <head>API Note:</head>
            </tag>
            <tag>
              <name>implSpec</name>
              <placement>a</placement>
              <head>Implementation Requirements:</head>
            </tag>
            <tag>
              <name>implNote</name>
              <placement>a</placement>
              <head>Implementation Note:</head>
            </tag>
            <tag>
              <name>complexity</name>
              <placement>m</placement>
              <head>Complexity:</head>
            </tag>
          </tags>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>${maven-gpg-plugin.version}</version>
        <executions>
          <execution>
            <id>sign</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
            <configuration>
              <gpgArguments>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>${central-publishing-maven-plugin.version}</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central</publishingServerId>
          <!-- optional: make CI fully hands-free -->
          <autoPublish>true</autoPublish>
          <waitUntil>published</waitUntil>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <executions>
          <execution>
            <id>default-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
              <id>report-aggregate</id>
              <phase>verify</phase>
              <inherited>false</inherited>
              <goals>
                  <goal>report-aggregate</goal>
              </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven-checkstyle-plugin.version}</version>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
          <includeTestSourceDirectory>false</includeTestSourceDirectory>
          <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>${maven-site-plugin.version}</version>
        <configuration>
            <locales>en</locales>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc-plugin.version}</version>
        <configuration>
          <defaultAuthor>Evan Bergstrom</defaultAuthor>
          <defaultVersion>${project.version}</defaultVersion>
          <version>true</version>
          <author>true</author>
          <quiet>true</quiet>
          <name>Documentation</name>
          <docfilessubdirs>true</docfilessubdirs>
          <additionalJOptions>
            <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
          </additionalJOptions>
          <additionalOptions>-stylesheetfile ${javaDocStylesheetPath} ${doclint.javadoc.qualifier} ${allowscript.javadoc.qualifier} -header '&lt;script src="https://polyfill.io/v3/polyfill.min.js?features=es6"&gt;&lt;/script&gt;&lt;script type="text/javascript" async src="${math.mathjax.url}"&gt;&lt;/script&gt;'</additionalOptions>
          <tags>
            <tag>
              <name>apiNote</name>
              <placement>a</placement>
              <head>API Note:</head>
            </tag>
            <tag>
              <name>implSpec</name>
              <placement>a</placement>
              <head>Implementation Requirements:</head>
            </tag>
            <tag>
              <name>implNote</name>
              <placement>a</placement>
              <head>Implementation Note:</head>
            </tag>
            <tag>
              <name>complexity</name>
              <placement>m</placement>
              <head>Complexity:</head>
            </tag>
          </tags>
        </configuration>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-report-plugin</artifactId>
          <version>${maven-surefire-report-plugin.version}</version>
          <configuration>
            <aggregate>true</aggregate>
            <linkXRef>true</linkXRef>
          </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>${maven-jxr-plugin.version}</version>
        <reportSets>
          <reportSet>
            <id>aggregate</id>
            <inherited>false</inherited>
            <reports>
              <report>aggregate</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven-checkstyle-plugin.version}</version>
        <reportSets>
          <reportSet>
            <id>aggregate-checkstyle-report</id>
            <reports>
              <report>checkstyle-aggregate</report>
            </reports>
          </reportSet>
        </reportSets>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
          <includeTestSourceDirectory>false</includeTestSourceDirectory>
          <linkXRef>false</linkXRef>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <reportSets>
          <reportSet>
            <id>report-aggregate</id>
            <inherited>false</inherited>
            <reports>
              <report>report-aggregate</report>
          </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.owasp</groupId>
        <artifactId>dependency-check-maven</artifactId>
        <version>${dependency-check.version}</version>
        <configuration>
          <nvdApiKey>c0e8ff62-c5ca-4fdc-a255-ff8e1e507714</nvdApiKey>
          <nvdApiDelay>1000</nvdApiDelay>
          <name>Dependency Check</name>
          <!-- Checking for updates can occassionally take a VERY long time -->
          <autoUpdate>false</autoUpdate>
        </configuration>
        <reportSets>
            <reportSet>
                <reports>
                    <report>aggregate</report>
                </reports>
            </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>

  <distributionManagement>
    <site>
      <id>${project.artifactId}-site</id>
      <name>SolisCode Site</name>
      <url>${project.baseUri}</url>
    </site>
  </distributionManagement>
</project>
